Add CanCan, Devise and Rails_admin. Set up login with num_id and alt_num_id

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,16 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :num_id %><br />
+    <%= f.email_field :num_id, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :alt_num_id %><br />
+    <%= f.email_field :alt_num_id, autofocus: true %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
