--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,6 +9,16 @@
   </div>
 
   <div class="field">
+    <%= f.label :num_id %><br />
+    <%= f.email_field :num_id, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :alt_num_id %><br />
+    <%= f.email_field :alt_num_id, autofocus: true %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
