--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,23 @@
 <html>
   <head>
     <title>Eshop</title>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    
+    <div>
+    <%= flash[:notice] if flash[:notice] %>        
+    <%= flash[:alert] if flash[:alert] %>        
+    </div>
+
+    <% if user_signed_in? %>
+
+      <%= link_to('Edit registration', edit_user_registration_path) %>
+      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+     
+    <% else %>
+     
+      <%= link_to('Register', new_user_registration_path)  %>
+      <%= link_to('Login', new_user_session_path)  %>  
+     
+    <% end %>
 
     <%= csrf_meta_tags %>
 
