Change sign up with devise to assept and save all the fields

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,12 +10,12 @@
 
   <div class="field">
     <%= f.label :num_id %><br />
-    <%= f.email_field :num_id, autofocus: true %>
+    <%= f.text_field :num_id, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :alt_num_id %><br />
-    <%= f.email_field :alt_num_id, autofocus: true %>
+    <%= f.text_field :alt_num_id, autofocus: true %>
   </div>
 
   <div class="field">
