Test assignment is ready

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,6 +5,11 @@
 <table>
   <thead>
     <tr>
+      <th>City</th>
+      <th>Address</th>
+      <th>Country</th>
+      <th>Total price</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +17,11 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
+        <td><%= order.city %></td>
+        <td><%= order.address %></td>
+        <td><%= order.country %></td>
+        <td><%= order.total_price %></td>
+        <td><%= order.user %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
